# renpy-analyzer

./: .gitignore  LICENSE  README.md  launcher.py  pyproject.toml  renpy_analyzer.spec
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
src/renpy_analyzer/: __init__.py  __main__.py  analyzer.py  app.py  bridge_worker.py  cli.py  log.py  models.py  parser.py  project.py  sdk_bridge.py  settings.py  version.py
src/renpy_analyzer/checks/: __init__.py  _label_body.py  assets.py  callcycle.py  callreturn.py  characters.py  emptylabels.py  flow.py  labels.py  logic.py  menus.py  nvl.py  persistent.py  replay.py  screens.py  structure.py  texttags.py  transforms.py  translations.py  variables.py
src/renpy_analyzer/report/: __init__.py  pdf.py
tests/: test_analyzer.py  test_bridge_worker.py  test_checks_assets.py  test_checks_callcycle.py  test_checks_callreturn.py  test_checks_characters.py  test_checks_emptylabels.py  test_checks_flow.py  test_checks_labels.py  test_checks_logic.py  test_checks_menus.py  test_checks_nvl.py  test_checks_persistent.py  test_checks_replay.py  test_checks_screens.py  test_checks_structure.py  test_checks_texttags.py  test_checks_transforms.py  test_checks_translations.py  test_checks_variables.py  test_cli.py  test_config_mutation.py  test_integration.py  test_jump_in_call.py  test_label_body.py  test_logging.py  test_models.py  test_mp3_music.py  test_multi_game.py  test_narrator_parsing.py  test_nested_menus.py  test_parser.py  test_pdf.py  test_project.py  test_rpa_detection.py  test_rpyc_detection.py  test_sdk_bridge.py  test_settings.py  test_texttag_dedup.py  test_translation_folder.py  (+3 more)
