[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "renpy-analyzer"
version = "0.1.0"
description = "Desktop GUI tool to scan Ren'Py visual novel projects for bugs and generate PDF reports"
requires-python = ">=3.10"
dependencies = [
    "customtkinter>=5.2",
    "PyMuPDF>=1.23",
    "Pillow>=10.0",
    "click>=8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov",
    "ruff",
]

[project.scripts]
renpy-analyzer = "renpy_analyzer.app:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.pytest.ini_options]
testpaths = ["tests"]
