[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "renpy-analyzer"
version = "1.0.0"
description = "Desktop GUI tool to scan Ren'Py visual novel projects for bugs and generate PDF reports"
license = "MIT"
requires-python = ">=3.10"
dependencies = [
    "customtkinter>=5.2",
    "reportlab>=4.0",
    "Pillow>=10.0",
    "click>=8.0",
    "platformdirs>=3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov",
    "ruff",
    "mypy",
]

[project.scripts]
renpy-analyzer = "renpy_analyzer.cli:analyze"

[project.gui-scripts]
renpy-analyzer-gui = "renpy_analyzer.app:main"

[tool.setuptools.packages.find]
where = ["src"]

# =============================================================================
# Ruff — linter + formatter
# =============================================================================

[tool.ruff]
target-version = "py310"
line-length = 120
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",     # pycodestyle errors
    "F",     # pyflakes
    "W",     # pycodestyle warnings
    "I",     # isort (import sorting)
    "UP",    # pyupgrade (modern Python syntax)
    "B",     # flake8-bugbear (common bug patterns)
    "SIM",   # flake8-simplify
    "RUF",   # ruff-specific rules
]
ignore = [
    "E501",  # line too long — let formatter handle wrapping where it can
    "SIM108", # ternary operator — not always clearer
]

[tool.ruff.lint.isort]
known-first-party = ["renpy_analyzer"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# =============================================================================
# Mypy — type checker
# =============================================================================

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false          # gradual — don't require annotations everywhere yet
check_untyped_defs = true              # but DO check bodies of untyped functions
ignore_missing_imports = true          # third-party libs without stubs (reportlab, customtkinter)
exclude = [
    "bridge_worker\\.py$",             # runs under SDK Python, imports renpy.*
    "build_venv/",
]

[[tool.mypy.overrides]]
module = "renpy_analyzer.report.pdf"
disable_error_code = ["union-attr"]    # reportlab canvas returns Any — suppress until stubs exist

# =============================================================================
# Pytest + Coverage
# =============================================================================

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = [
    "--tb=short",
    "--strict-markers",
]

[tool.coverage.run]
source = ["renpy_analyzer"]
omit = [
    "src/renpy_analyzer/app.py",           # GUI — not unit-testable
    "src/renpy_analyzer/bridge_worker.py", # runs under SDK Python
]

[tool.coverage.report]
show_missing = true
skip_empty = true
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.",
    "if TYPE_CHECKING:",
]
